--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,5 +7,5 @@ artifacts:
   files:
     -echo files........
     - echo $CODEBUILD_SRC_DIR
-    - '$CODEBUILD_SRC_DIR/build/libs/*'
+    - '*/build/libs/*'
   name: $(AWS_REGION)-$(date +%Y-%m-%d)
