--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,5 +7,5 @@ artifacts:
   files:
     -echo files........
     - echo $CODEBUILD_SRC_DIR
-    - '*build/*'
+    - 'build/*'
   name: $(AWS_REGION)-$(date +%Y-%m-%d)
