--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
 artifacts:
   files:
   commands:
-    ls ./build/libs/    
+    -echo ls ./build/libs/    
     -echo files........
     - echo $CODEBUILD_SRC_DIR
     - 'build/*'
