--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   build:
     commands:
-      - gradle build
+      - ./gradle build
 artifacts:
   commands:
    - echo $CODEBUILD_SRC_DIR
